added logging, env example, added and modified swagger, /api/products get + /api/products/{id} get, /api/featured-products get, pagination added, db connection
